--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         </form>
       </div>
     </div>
+
+    <div class="sort-pop modal fade">
+      <div class="sorted-quotes container">
+        <div class="accordion sorted-accordion"></div>
+        <button class="btn btn-default close-sorted-list">Close</button>
+      </div>
+    </div>
     
     <div class="container header">
         <h1 class="text-muted pull-left">Inspiration...</h1>
@@ -25,7 +32,7 @@
     </div>
     
     <div class="container">
-      <div id="accordion">
+      <div class="accordion main-accordion">
       </div>
     </div>
 
